# platformer

./: Cargo.toml  parabolics  rustfmt.toml  test.tmx  tiles.tsx  tiles.xcf
src/: damage.rs  lib.rs  line-frag.glsl  line-vert.glsl  main.rs  sprite-frag.glsl  sprite-vert.glsl  unit.rs
src/alg/: mod.rs
src/game/: map.rs  mod.rs  player.rs  render.rs
src/gfx/: mod.rs  shader.rs
