[package]
name       = "rust-game"
version    = "0.1.0"
authors    = ["Rachel K <raech.kanati@gmail.com>"]
edition    = "2018"
publish    = false
repository = "https://github.com/rkanati/rust-game.git"

[dependencies]
glutin            = "0.22.0-alpha5"
gl                = "*"
image             = "*"
tiled             = "0.8"
static_assertions = "1.1"
nalgebra          = "0.19"

